--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                 <h2 class="visually-hidden">features</h2>
                 <ul class="features-list">
                     <li class="features-item">
+                        <div class="features-item-icon">
+                            <svg class="features-icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Strategy</h3>
                         <p class="features-item-text">
                             Our goal is to identify the business
@@ -68,6 +73,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-icon">
+                            <svg class="features-icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-clock-1-4"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Punctuality</h3>
                         <p class="features-item-text">
                             Bring the key message to the brand's audience for the best price within the shortest
@@ -76,6 +86,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-icon">
+                            <svg class="features-icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Diligence</h3>
                         <p class="features-item-text">
                             Research and confirm brands that present the strongest digital growth opportunities and
@@ -84,6 +99,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-icon">
+                            <svg class="features-icon" width="64" height="64">
+                                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Technologies</h3>
                         <p class="features-item-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for
@@ -104,6 +124,36 @@
                         <div class="worker-container">
                             <h3 class="team-item-title">Mark Guerrero</h3>
                             <p class="team-item-text">Product Designer</p>
+                            <ul class="team-socials">
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -111,6 +161,36 @@
                         <div class="worker-container">
                             <h3 class="team-item-title">Tom Ford</h3>
                             <p class="team-item-text">Frontend Developer</p>
+                            <ul class="team-socials">
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -119,6 +199,36 @@
                         <div class="worker-container">
                             <h3 class="team-item-title">Camila Garcia</h3>
                             <p class="team-item-text">Marketing</p>
+                            <ul class="team-socials">
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -127,6 +237,36 @@
                         <div class="worker-container">
                             <h3 class="team-item-title">Daniel Wilson</h3>
                             <p class="team-item-text">UI Designer</p>
+                            <ul class="team-socials">
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-list-icon">
+                                    <a href="" target="_blank" class="social-link">
+                                        <svg class="icon" width="16" height="16">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -193,11 +333,48 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a class="logo footer-container" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.
-            </p>
+        <div class="footer-container">
+            <div class="container">
+                <a class="logo footer-container-part" href="./index.html">Web<span
+                        class="footer-logo-part">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.
+                </p>
+            </div>
+            <div class="container-footer-link">
+                <p class="footer-social-media">Social media</p>
+                <ul class="footer-list-icon">
+                    <li class="footer-link-icon">
+                        <a href="" target="_blank" class="footer-link">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-link-icon">
+                        <a href="" target="_blank" class="footer-link">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-link-icon">
+                        <a href="" target="_blank" class="footer-link">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-link-icon">
+                        <a href="" target="_blank" class="footer-link">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
