--- a/index.html
+++ b/index.html
@@ -333,42 +333,41 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="container">
-                <a class="logo footer-container-part" href="./index.html">Web<span
-                        class="footer-logo-part">Studio</span></a>
+        <div class="footer-container container">
+            <div class="footer-container-logo">
+                <a class="logo logo-bottom" href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                     &
                     growth solutions.
                 </p>
             </div>
-            <div class="container-footer-link">
-                <p class="footer-social-media">Social media</p>
-                <ul class="footer-list-icon">
-                    <li class="footer-link-icon">
-                        <a href="" target="_blank" class="footer-link">
-                            <svg class="footer-icon" width="24" height="24">
+            <div class="container-footer-socials">
+                <p class="footer-social-subtitle">Social media</p>
+                <ul class="footer-list">
+                    <li class="footer-item-icons">
+                        <a class="footer-icons-link" href="" target="_blank">
+                            <svg class="footer-social-icon" width="24" height="24">
                                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-link-icon">
-                        <a href="" target="_blank" class="footer-link">
-                            <svg class="footer-icon" width="24" height="24">
+                    <li class="footer-item-icons">
+                        <a class="footer-icons-link" href="" target="_blank">
+                            <svg class="footer-social-icon" width="24" height="24">
                                 <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-link-icon">
-                        <a href="" target="_blank" class="footer-link">
-                            <svg class="footer-icon" width="24" height="24">
+                    <li class="footer-item-icons">
+                        <a class="footer-icons-link" href="" target="_blank">
+                            <svg class="footer-social-icon" width="24" height="24">
                                 <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-link-icon">
-                        <a href="" target="_blank" class="footer-link">
-                            <svg class="footer-icon" width="24" height="24">
+                    <li class="footer-item-icons">
+                        <a class="footer-icons-link" href="" target="_blank">
+                            <svg class="footer-social-icon" width="24" height="24">
                                 <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                             </svg>
                         </a>
