--- a/index.html
+++ b/index.html
@@ -286,8 +286,16 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/cashless-payment.jpg" alt="image cashless payment" width="360" height="300"
-                            class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/cashless-payment.jpg" alt="image cashless payment" width="360"
+                                height="300" class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Cashless Payment</h3>
                             <p class="portfolio-item-text">Marketing</p>
