--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li class="features-item">
                         <div class="features-item-icon">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
                             </svg>
                         </div>
                         <h3 class="features-item-title">Strategy</h3>
@@ -75,7 +75,7 @@
                     <li class="features-item">
                         <div class="features-item-icon">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-clock-1-4"></use>
+                                <use href="./images/icons.svg#icon-clock-1-4"></use>
                             </svg>
                         </div>
                         <h3 class="features-item-title">Punctuality</h3>
@@ -88,7 +88,7 @@
                     <li class="features-item">
                         <div class="features-item-icon">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
                         <h3 class="features-item-title">Diligence</h3>
@@ -101,7 +101,7 @@
                     <li class="features-item">
                         <div class="features-item-icon">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
                         <h3 class="features-item-title">Technologies</h3>
@@ -128,28 +128,28 @@
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -165,28 +165,28 @@
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -203,28 +203,28 @@
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -241,28 +241,28 @@
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-list-icon">
                                     <a href="" target="_blank" class="social-link">
                                         <svg class="icon" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -278,8 +278,16 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/banking-app.jpg" alt="image banking app" width="360" height="300"
-                            class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/banking-app.jpg" alt="image banking app" width="360" height="300"
+                                class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Banking App</h3>
                             <p class="portfolio-item-text">App</p>
@@ -302,32 +310,64 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/meditation-app.jpg" alt="image meditation app" width="360" height="300"
-                            class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/meditation-app.jpg" alt="image meditation app" width="360" height="300"
+                                class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Meditation App</h3>
                             <p class="portfolio-item-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/taxi-service.jpg" alt="image taxi service" width="360" height="300"
-                            class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/taxi-service.jpg" alt="image taxi service" width="360" height="300"
+                                class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Taxi Service</h3>
                             <p class="portfolio-item-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/screen-illustrations.jpg" alt="image screen illustrations" width="360"
-                            height="300" class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/screen-illustrations.jpg" alt="image screen illustrations" width="360"
+                                height="300" class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Screen Illustrations</h3>
                             <p class="portfolio-item-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/online-courses.jpg" alt="image online courses" width="360" height="300"
-                            class="portfolio-img">
+                        <div class="container-portfolio-card">
+                            <img src="./images/online-courses.jpg" alt="image online courses" width="360" height="300"
+                                class="portfolio-img">
+                            <p class="card-overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item-box">
                             <h3 class="portfolio-item-title">Online Courses</h3>
                             <p class="portfolio-item-text">Marketing</p>
@@ -355,28 +395,28 @@
                     <li class="footer-item-icons">
                         <a class="footer-icons-link" href="" target="_blank">
                             <svg class="footer-social-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item-icons">
                         <a class="footer-icons-link" href="" target="_blank">
                             <svg class="footer-social-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item-icons">
                         <a class="footer-icons-link" href="" target="_blank">
                             <svg class="footer-social-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item-icons">
                         <a class="footer-icons-link" href="" target="_blank">
                             <svg class="footer-social-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                         </a>
                     </li>
